--- a/Dureti_Shemsi_Week_1_Project_SQLCC.ipynb
+++ b/Dureti_Shemsi_Week_1_Project_SQLCC.ipynb
@@ -7144,17 +7144,151 @@
         "\n",
         "# TO BE COMPLETED\n",
         "query = \"\"\"\n",
-        "SELECT ???\n",
+        "SELECT host_id, host FROM listings WHERE neighbourhood_id = 35 ORDER BY host_id DESC\n",
         "\"\"\"\n",
         "\n",
         "run(query)\n",
         "check(q1_2_3 = query)"
       ],
       "metadata": {
-        "id": "KfKlwOHaTx32"
+        "id": "KfKlwOHaTx32",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 418
+        },
+        "outputId": "71a56e7b-2116-48a0-ec20-94c3da5cb9f1"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "\n",
+              "<style>\n",
+              "  html {\n",
+              "    --td-font-color: black;\n",
+              "    --font-color: black;\n",
+              "    --background-color: #e0e0e0;\n",
+              "  }\n",
+              "  html[theme=dark] {\n",
+              "    --td-font-color: white;\n",
+              "    --font-color: black;\n",
+              "    --background-color: #6688ff;\n",
+              "  }\n",
+              "  th {\n",
+              "    background: #fbd44c;\n",
+              "    color: var(--font-color);\n",
+              "    font-size: 16px;\n",
+              "    text-align: center;\n",
+              "    font-weight: bold;\n",
+              "  }\n",
+              "  tr:nth-child(even) {\n",
+              "    background-color: var(--background-color);\n",
+              "    color: var(--font-color);\n",
+              "  }\n",
+              "  td {\n",
+              "    font-size: 14px;\n",
+              "    color: var(--td-font-color);\n",
+              "  }\n",
+              "</style>\n",
+              "<div style='max-height: 500px; overflow: auto; width: fit-content; border-style: solid; border-width: 1px; border-color: #0139fe; font-family: GT Planar,Inter,Arial,sans-serif;'><style type=\"text/css\">\n",
+              "</style>\n",
+              "<table id=\"T_949fc_\">\n",
+              "  <thead>\n",
+              "    <tr>\n",
+              "      <th class=\"blank level0\" >&nbsp;</th>\n",
+              "      <th class=\"col_heading level0 col0\" >host_id</th>\n",
+              "      <th class=\"col_heading level0 col1\" >host</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th id=\"T_949fc_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+              "      <td id=\"T_949fc_row0_col0\" class=\"data row0 col0\" >285488167</td>\n",
+              "      <td id=\"T_949fc_row0_col1\" class=\"data row0 col1\" >Rick</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_949fc_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+              "      <td id=\"T_949fc_row1_col0\" class=\"data row1 col0\" >244604436</td>\n",
+              "      <td id=\"T_949fc_row1_col1\" class=\"data row1 col1\" >Tiina</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_949fc_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
+              "      <td id=\"T_949fc_row2_col0\" class=\"data row2 col0\" >185783910</td>\n",
+              "      <td id=\"T_949fc_row2_col1\" class=\"data row2 col1\" >Annie</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_949fc_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
+              "      <td id=\"T_949fc_row3_col0\" class=\"data row3 col0\" >109067745</td>\n",
+              "      <td id=\"T_949fc_row3_col1\" class=\"data row3 col1\" >Andrew</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_949fc_level0_row4\" class=\"row_heading level0 row4\" >4</th>\n",
+              "      <td id=\"T_949fc_row4_col0\" class=\"data row4 col0\" >41506490</td>\n",
+              "      <td id=\"T_949fc_row4_col1\" class=\"data row4 col1\" >Alex White</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_949fc_level0_row5\" class=\"row_heading level0 row5\" >5</th>\n",
+              "      <td id=\"T_949fc_row5_col0\" class=\"data row5 col0\" >22980172</td>\n",
+              "      <td id=\"T_949fc_row5_col1\" class=\"data row5 col1\" >María</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_949fc_level0_row6\" class=\"row_heading level0 row6\" >6</th>\n",
+              "      <td id=\"T_949fc_row6_col0\" class=\"data row6 col0\" >22553304</td>\n",
+              "      <td id=\"T_949fc_row6_col1\" class=\"data row6 col1\" >Stephen</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_949fc_level0_row7\" class=\"row_heading level0 row7\" >7</th>\n",
+              "      <td id=\"T_949fc_row7_col0\" class=\"data row7 col0\" >18901875</td>\n",
+              "      <td id=\"T_949fc_row7_col1\" class=\"data row7 col1\" >Astrid And Nick</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_949fc_level0_row8\" class=\"row_heading level0 row8\" >8</th>\n",
+              "      <td id=\"T_949fc_row8_col0\" class=\"data row8 col0\" >14228436</td>\n",
+              "      <td id=\"T_949fc_row8_col1\" class=\"data row8 col1\" >Audrey</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_949fc_level0_row9\" class=\"row_heading level0 row9\" >9</th>\n",
+              "      <td id=\"T_949fc_row9_col0\" class=\"data row9 col0\" >11745874</td>\n",
+              "      <td id=\"T_949fc_row9_col1\" class=\"data row9 col1\" >Angelika</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_949fc_level0_row10\" class=\"row_heading level0 row10\" >10</th>\n",
+              "      <td id=\"T_949fc_row10_col0\" class=\"data row10 col0\" >2537559</td>\n",
+              "      <td id=\"T_949fc_row10_col1\" class=\"data row10 col1\" >Sian</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_949fc_level0_row11\" class=\"row_heading level0 row11\" >11</th>\n",
+              "      <td id=\"T_949fc_row11_col0\" class=\"data row11 col0\" >1305312</td>\n",
+              "      <td id=\"T_949fc_row11_col1\" class=\"data row11 col1\" >Gladys</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_949fc_level0_row12\" class=\"row_heading level0 row12\" >12</th>\n",
+              "      <td id=\"T_949fc_row12_col0\" class=\"data row12 col0\" >113874</td>\n",
+              "      <td id=\"T_949fc_row12_col1\" class=\"data row12 col1\" >Bondi Beach Holiday Homes</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "-------------------\n",
+            "Your SQL query is correct!\n",
+            "\n",
+            "-------------------\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -7176,17 +7310,101 @@
         "\n",
         "# TO BE COMPLETED\n",
         "query = \"\"\"\n",
-        "SELECT ???\n",
+        "SELECT host_id, host FROM listings WHERE neighbourhood_id = 27 AND room_type = 'Private room' ORDER BY host_id DESC\n",
         "\"\"\"\n",
         "\n",
         "run(query)\n",
         "check(q1_2_4 = query)"
       ],
       "metadata": {
-        "id": "RVDBFQkzT9gO"
+        "id": "RVDBFQkzT9gO",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 184
+        },
+        "outputId": "26a300ea-32d7-422e-e5b4-493dfe32eb72"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "\n",
+              "<style>\n",
+              "  html {\n",
+              "    --td-font-color: black;\n",
+              "    --font-color: black;\n",
+              "    --background-color: #e0e0e0;\n",
+              "  }\n",
+              "  html[theme=dark] {\n",
+              "    --td-font-color: white;\n",
+              "    --font-color: black;\n",
+              "    --background-color: #6688ff;\n",
+              "  }\n",
+              "  th {\n",
+              "    background: #fbd44c;\n",
+              "    color: var(--font-color);\n",
+              "    font-size: 16px;\n",
+              "    text-align: center;\n",
+              "    font-weight: bold;\n",
+              "  }\n",
+              "  tr:nth-child(even) {\n",
+              "    background-color: var(--background-color);\n",
+              "    color: var(--font-color);\n",
+              "  }\n",
+              "  td {\n",
+              "    font-size: 14px;\n",
+              "    color: var(--td-font-color);\n",
+              "  }\n",
+              "</style>\n",
+              "<div style='max-height: 500px; overflow: auto; width: fit-content; border-style: solid; border-width: 1px; border-color: #0139fe; font-family: GT Planar,Inter,Arial,sans-serif;'><style type=\"text/css\">\n",
+              "</style>\n",
+              "<table id=\"T_a66ff_\">\n",
+              "  <thead>\n",
+              "    <tr>\n",
+              "      <th class=\"blank level0\" >&nbsp;</th>\n",
+              "      <th class=\"col_heading level0 col0\" >host_id</th>\n",
+              "      <th class=\"col_heading level0 col1\" >host</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th id=\"T_a66ff_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+              "      <td id=\"T_a66ff_row0_col0\" class=\"data row0 col0\" >61907880</td>\n",
+              "      <td id=\"T_a66ff_row0_col1\" class=\"data row0 col1\" >Malin</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_a66ff_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+              "      <td id=\"T_a66ff_row1_col0\" class=\"data row1 col0\" >40070341</td>\n",
+              "      <td id=\"T_a66ff_row1_col1\" class=\"data row1 col1\" >Marcela</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_a66ff_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
+              "      <td id=\"T_a66ff_row2_col0\" class=\"data row2 col0\" >16006077</td>\n",
+              "      <td id=\"T_a66ff_row2_col1\" class=\"data row2 col1\" >Nathalia</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "-------------------\n",
+            "Your SQL query is correct!\n",
+            "\n",
+            "-------------------\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
