--- a/Dureti_Shemsi_Week_2_Project_SQLCC.ipynb
+++ b/Dureti_Shemsi_Week_2_Project_SQLCC.ipynb
@@ -592,17 +592,94 @@
         "\n",
         "# TO BE COMPLETED\n",
         "query = \"\"\"\n",
-        "SELECT * FROM neighbourhoods ???\n",
+        "SELECT * \n",
+        "FROM neighbourhoods \n",
+        "WHERE neighbourhood_id =21 \n",
+        "\n",
         "\"\"\"\n",
         "\n",
         "run(query)\n",
         "check(q2_2_2a = query)"
       ],
       "metadata": {
-        "id": "3d3ZR1BIM57-"
+        "id": "3d3ZR1BIM57-",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 137
+        },
+        "outputId": "8f247622-dacb-4185-e79a-6e61938d8e25"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "\n",
+              "<style>\n",
+              "  html {\n",
+              "    --td-font-color: black;\n",
+              "    --font-color: black;\n",
+              "    --background-color: #e0e0e0;\n",
+              "  }\n",
+              "  html[theme=dark] {\n",
+              "    --td-font-color: white;\n",
+              "    --font-color: black;\n",
+              "    --background-color: #6688ff;\n",
+              "  }\n",
+              "  th {\n",
+              "    background: #fbd44c;\n",
+              "    color: var(--font-color);\n",
+              "    font-size: 16px;\n",
+              "    text-align: center;\n",
+              "    font-weight: bold;\n",
+              "  }\n",
+              "  tr:nth-child(even) {\n",
+              "    background-color: var(--background-color);\n",
+              "    color: var(--font-color);\n",
+              "  }\n",
+              "  td {\n",
+              "    font-size: 14px;\n",
+              "    color: var(--td-font-color);\n",
+              "  }\n",
+              "</style>\n",
+              "<div style='max-height: 500px; overflow: auto; width: fit-content; border-style: solid; border-width: 1px; border-color: #0139fe; font-family: GT Planar,Inter,Arial,sans-serif;'><style type=\"text/css\">\n",
+              "</style>\n",
+              "<table id=\"T_ff823_\">\n",
+              "  <thead>\n",
+              "    <tr>\n",
+              "      <th class=\"blank level0\" >&nbsp;</th>\n",
+              "      <th class=\"col_heading level0 col0\" >neighbourhood_id</th>\n",
+              "      <th class=\"col_heading level0 col1\" >neighbourhood</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th id=\"T_ff823_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+              "      <td id=\"T_ff823_row0_col0\" class=\"data row0 col0\" >21</td>\n",
+              "      <td id=\"T_ff823_row0_col1\" class=\"data row0 col1\" >Marrickville</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "-------------------\n",
+            "Your SQL query is correct!\n",
+            "\n",
+            "-------------------\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -615,17 +692,147 @@
         "\n",
         "# TO BE COMPLETED\n",
         "query = \"\"\"\n",
-        "SELECT * FROM calendar ???\n",
+        "SELECT * \n",
+        "FROM calendar\n",
+        "WHERE listing_id=22296011\n",
         "\"\"\"\n",
         "\n",
         "run(query)\n",
         "check(q2_2_2b = query)"
       ],
       "metadata": {
-        "id": "vihX4ewsNm6g"
+        "id": "vihX4ewsNm6g",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 280
+        },
+        "outputId": "856fd272-f378-40c8-ade1-8e32c63f1b80"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "\n",
+              "<style>\n",
+              "  html {\n",
+              "    --td-font-color: black;\n",
+              "    --font-color: black;\n",
+              "    --background-color: #e0e0e0;\n",
+              "  }\n",
+              "  html[theme=dark] {\n",
+              "    --td-font-color: white;\n",
+              "    --font-color: black;\n",
+              "    --background-color: #6688ff;\n",
+              "  }\n",
+              "  th {\n",
+              "    background: #fbd44c;\n",
+              "    color: var(--font-color);\n",
+              "    font-size: 16px;\n",
+              "    text-align: center;\n",
+              "    font-weight: bold;\n",
+              "  }\n",
+              "  tr:nth-child(even) {\n",
+              "    background-color: var(--background-color);\n",
+              "    color: var(--font-color);\n",
+              "  }\n",
+              "  td {\n",
+              "    font-size: 14px;\n",
+              "    color: var(--td-font-color);\n",
+              "  }\n",
+              "</style>\n",
+              "<div style='max-height: 500px; overflow: auto; width: fit-content; border-style: solid; border-width: 1px; border-color: #0139fe; font-family: GT Planar,Inter,Arial,sans-serif;'><style type=\"text/css\">\n",
+              "</style>\n",
+              "<table id=\"T_fca09_\">\n",
+              "  <thead>\n",
+              "    <tr>\n",
+              "      <th class=\"blank level0\" >&nbsp;</th>\n",
+              "      <th class=\"col_heading level0 col0\" >listing_id</th>\n",
+              "      <th class=\"col_heading level0 col1\" >date</th>\n",
+              "      <th class=\"col_heading level0 col2\" >available</th>\n",
+              "      <th class=\"col_heading level0 col3\" >price_in_dollar</th>\n",
+              "      <th class=\"col_heading level0 col4\" >minimum_nights</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th id=\"T_fca09_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+              "      <td id=\"T_fca09_row0_col0\" class=\"data row0 col0\" >22296011</td>\n",
+              "      <td id=\"T_fca09_row0_col1\" class=\"data row0 col1\" >2022-09-09T00:00:00Z</td>\n",
+              "      <td id=\"T_fca09_row0_col2\" class=\"data row0 col2\" >0</td>\n",
+              "      <td id=\"T_fca09_row0_col3\" class=\"data row0 col3\" >40.00</td>\n",
+              "      <td id=\"T_fca09_row0_col4\" class=\"data row0 col4\" >90</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_fca09_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+              "      <td id=\"T_fca09_row1_col0\" class=\"data row1 col0\" >22296011</td>\n",
+              "      <td id=\"T_fca09_row1_col1\" class=\"data row1 col1\" >2022-09-10T00:00:00Z</td>\n",
+              "      <td id=\"T_fca09_row1_col2\" class=\"data row1 col2\" >0</td>\n",
+              "      <td id=\"T_fca09_row1_col3\" class=\"data row1 col3\" >40.00</td>\n",
+              "      <td id=\"T_fca09_row1_col4\" class=\"data row1 col4\" >90</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_fca09_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
+              "      <td id=\"T_fca09_row2_col0\" class=\"data row2 col0\" >22296011</td>\n",
+              "      <td id=\"T_fca09_row2_col1\" class=\"data row2 col1\" >2022-09-11T00:00:00Z</td>\n",
+              "      <td id=\"T_fca09_row2_col2\" class=\"data row2 col2\" >0</td>\n",
+              "      <td id=\"T_fca09_row2_col3\" class=\"data row2 col3\" >40.00</td>\n",
+              "      <td id=\"T_fca09_row2_col4\" class=\"data row2 col4\" >90</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_fca09_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
+              "      <td id=\"T_fca09_row3_col0\" class=\"data row3 col0\" >22296011</td>\n",
+              "      <td id=\"T_fca09_row3_col1\" class=\"data row3 col1\" >2022-09-12T00:00:00Z</td>\n",
+              "      <td id=\"T_fca09_row3_col2\" class=\"data row3 col2\" >0</td>\n",
+              "      <td id=\"T_fca09_row3_col3\" class=\"data row3 col3\" >40.00</td>\n",
+              "      <td id=\"T_fca09_row3_col4\" class=\"data row3 col4\" >90</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_fca09_level0_row4\" class=\"row_heading level0 row4\" >4</th>\n",
+              "      <td id=\"T_fca09_row4_col0\" class=\"data row4 col0\" >22296011</td>\n",
+              "      <td id=\"T_fca09_row4_col1\" class=\"data row4 col1\" >2022-09-13T00:00:00Z</td>\n",
+              "      <td id=\"T_fca09_row4_col2\" class=\"data row4 col2\" >0</td>\n",
+              "      <td id=\"T_fca09_row4_col3\" class=\"data row4 col3\" >40.00</td>\n",
+              "      <td id=\"T_fca09_row4_col4\" class=\"data row4 col4\" >90</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_fca09_level0_row5\" class=\"row_heading level0 row5\" >5</th>\n",
+              "      <td id=\"T_fca09_row5_col0\" class=\"data row5 col0\" >22296011</td>\n",
+              "      <td id=\"T_fca09_row5_col1\" class=\"data row5 col1\" >2022-09-14T00:00:00Z</td>\n",
+              "      <td id=\"T_fca09_row5_col2\" class=\"data row5 col2\" >0</td>\n",
+              "      <td id=\"T_fca09_row5_col3\" class=\"data row5 col3\" >40.00</td>\n",
+              "      <td id=\"T_fca09_row5_col4\" class=\"data row5 col4\" >90</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_fca09_level0_row6\" class=\"row_heading level0 row6\" >6</th>\n",
+              "      <td id=\"T_fca09_row6_col0\" class=\"data row6 col0\" >22296011</td>\n",
+              "      <td id=\"T_fca09_row6_col1\" class=\"data row6 col1\" >2022-09-15T00:00:00Z</td>\n",
+              "      <td id=\"T_fca09_row6_col2\" class=\"data row6 col2\" >0</td>\n",
+              "      <td id=\"T_fca09_row6_col3\" class=\"data row6 col3\" >40.00</td>\n",
+              "      <td id=\"T_fca09_row6_col4\" class=\"data row6 col4\" >90</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "-------------------\n",
+            "Your SQL query is correct!\n",
+            "\n",
+            "-------------------\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -638,17 +845,92 @@
         "\n",
         "# TO BE COMPLETED\n",
         "query = \"\"\"\n",
-        "SELECT * FROM reviews ???\n",
+        "SELECT * \n",
+        "FROM reviews\n",
+        "WHERE listing_id=22296011\n",
         "\"\"\"\n",
         "\n",
         "run(query)\n",
         "check(q2_2_2c = query)"
       ],
       "metadata": {
-        "id": "EgQiIdPJNnHV"
+        "id": "EgQiIdPJNnHV",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 114
+        },
+        "outputId": "b517f39e-b044-43ae-f677-f03c77f00ceb"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "\n",
+              "<style>\n",
+              "  html {\n",
+              "    --td-font-color: black;\n",
+              "    --font-color: black;\n",
+              "    --background-color: #e0e0e0;\n",
+              "  }\n",
+              "  html[theme=dark] {\n",
+              "    --td-font-color: white;\n",
+              "    --font-color: black;\n",
+              "    --background-color: #6688ff;\n",
+              "  }\n",
+              "  th {\n",
+              "    background: #fbd44c;\n",
+              "    color: var(--font-color);\n",
+              "    font-size: 16px;\n",
+              "    text-align: center;\n",
+              "    font-weight: bold;\n",
+              "  }\n",
+              "  tr:nth-child(even) {\n",
+              "    background-color: var(--background-color);\n",
+              "    color: var(--font-color);\n",
+              "  }\n",
+              "  td {\n",
+              "    font-size: 14px;\n",
+              "    color: var(--td-font-color);\n",
+              "  }\n",
+              "</style>\n",
+              "<div style='max-height: 500px; overflow: auto; width: fit-content; border-style: solid; border-width: 1px; border-color: #0139fe; font-family: GT Planar,Inter,Arial,sans-serif;'><style type=\"text/css\">\n",
+              "</style>\n",
+              "<table id=\"T_9a70c_\">\n",
+              "  <thead>\n",
+              "    <tr>\n",
+              "      <th class=\"blank level0\" >&nbsp;</th>\n",
+              "      <th class=\"col_heading level0 col0\" >listing_id</th>\n",
+              "      <th class=\"col_heading level0 col1\" >review_id</th>\n",
+              "      <th class=\"col_heading level0 col2\" >date</th>\n",
+              "      <th class=\"col_heading level0 col3\" >reviewer_id</th>\n",
+              "      <th class=\"col_heading level0 col4\" >reviewer</th>\n",
+              "      <th class=\"col_heading level0 col5\" >comments</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "-------------------\n",
+            "Your SQL query is correct!\n",
+            "\n",
+            "-------------------\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
