--- a/Dureti_Shemsi_Week_2_Project_SQLCC.ipynb
+++ b/Dureti_Shemsi_Week_2_Project_SQLCC.ipynb
@@ -966,17 +966,90 @@
         "\n",
         "# TO BE COMPLETED\n",
         "query = \"\"\"\n",
-        "SELECT ... FROM listings\n",
+        "SELECT AVG(price_in_dollar)\n",
+        " FROM listings\n",
         "\"\"\"\n",
         "\n",
         "run(query)\n",
         "check(q2_3_1a = query)"
       ],
       "metadata": {
-        "id": "eA46RTlNVQie"
+        "id": "eA46RTlNVQie",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 137
+        },
+        "outputId": "7b1216dd-f3ca-474b-cf49-dd57a60b6632"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "\n",
+              "<style>\n",
+              "  html {\n",
+              "    --td-font-color: black;\n",
+              "    --font-color: black;\n",
+              "    --background-color: #e0e0e0;\n",
+              "  }\n",
+              "  html[theme=dark] {\n",
+              "    --td-font-color: white;\n",
+              "    --font-color: black;\n",
+              "    --background-color: #6688ff;\n",
+              "  }\n",
+              "  th {\n",
+              "    background: #fbd44c;\n",
+              "    color: var(--font-color);\n",
+              "    font-size: 16px;\n",
+              "    text-align: center;\n",
+              "    font-weight: bold;\n",
+              "  }\n",
+              "  tr:nth-child(even) {\n",
+              "    background-color: var(--background-color);\n",
+              "    color: var(--font-color);\n",
+              "  }\n",
+              "  td {\n",
+              "    font-size: 14px;\n",
+              "    color: var(--td-font-color);\n",
+              "  }\n",
+              "</style>\n",
+              "<div style='max-height: 500px; overflow: auto; width: fit-content; border-style: solid; border-width: 1px; border-color: #0139fe; font-family: GT Planar,Inter,Arial,sans-serif;'><style type=\"text/css\">\n",
+              "</style>\n",
+              "<table id=\"T_c91d5_\">\n",
+              "  <thead>\n",
+              "    <tr>\n",
+              "      <th class=\"blank level0\" >&nbsp;</th>\n",
+              "      <th class=\"col_heading level0 col0\" >AVG(price_in_dollar)</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th id=\"T_c91d5_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+              "      <td id=\"T_c91d5_row0_col0\" class=\"data row0 col0\" >703.57</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "-------------------\n",
+            "Your SQL query is correct!\n",
+            "\n",
+            "-------------------\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -988,17 +1061,90 @@
         "\n",
         "# TO BE COMPLETED\n",
         "query = \"\"\"\n",
-        "SELECT ... FROM listings\n",
+        "SELECT MAX(price_in_dollar)\n",
+        "FROM listings\n",
         "\"\"\"\n",
         "\n",
         "run(query)\n",
         "check(q2_3_1b = query)"
       ],
       "metadata": {
-        "id": "4hloPjd-VS40"
+        "id": "4hloPjd-VS40",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 137
+        },
+        "outputId": "ac744859-9106-4475-c884-3696e6cdcb41"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "\n",
+              "<style>\n",
+              "  html {\n",
+              "    --td-font-color: black;\n",
+              "    --font-color: black;\n",
+              "    --background-color: #e0e0e0;\n",
+              "  }\n",
+              "  html[theme=dark] {\n",
+              "    --td-font-color: white;\n",
+              "    --font-color: black;\n",
+              "    --background-color: #6688ff;\n",
+              "  }\n",
+              "  th {\n",
+              "    background: #fbd44c;\n",
+              "    color: var(--font-color);\n",
+              "    font-size: 16px;\n",
+              "    text-align: center;\n",
+              "    font-weight: bold;\n",
+              "  }\n",
+              "  tr:nth-child(even) {\n",
+              "    background-color: var(--background-color);\n",
+              "    color: var(--font-color);\n",
+              "  }\n",
+              "  td {\n",
+              "    font-size: 14px;\n",
+              "    color: var(--td-font-color);\n",
+              "  }\n",
+              "</style>\n",
+              "<div style='max-height: 500px; overflow: auto; width: fit-content; border-style: solid; border-width: 1px; border-color: #0139fe; font-family: GT Planar,Inter,Arial,sans-serif;'><style type=\"text/css\">\n",
+              "</style>\n",
+              "<table id=\"T_93e98_\">\n",
+              "  <thead>\n",
+              "    <tr>\n",
+              "      <th class=\"blank level0\" >&nbsp;</th>\n",
+              "      <th class=\"col_heading level0 col0\" >MAX(price_in_dollar)</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th id=\"T_93e98_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+              "      <td id=\"T_93e98_row0_col0\" class=\"data row0 col0\" >28613.00</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "-------------------\n",
+            "Your SQL query is correct!\n",
+            "\n",
+            "-------------------\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1010,17 +1156,90 @@
         "\n",
         "# TO BE COMPLETED\n",
         "query = \"\"\"\n",
-        "SELECT ... FROM listings\n",
+        "SELECT MIN(price_in_dollar)\n",
+        "FROM listings\n",
         "\"\"\"\n",
         "\n",
         "run(query)\n",
         "check(q2_3_1c = query)"
       ],
       "metadata": {
-        "id": "6lEEgAojVTYR"
+        "id": "6lEEgAojVTYR",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 137
+        },
+        "outputId": "d7e65d62-93f2-4d9b-cd70-833a72004044"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "\n",
+              "<style>\n",
+              "  html {\n",
+              "    --td-font-color: black;\n",
+              "    --font-color: black;\n",
+              "    --background-color: #e0e0e0;\n",
+              "  }\n",
+              "  html[theme=dark] {\n",
+              "    --td-font-color: white;\n",
+              "    --font-color: black;\n",
+              "    --background-color: #6688ff;\n",
+              "  }\n",
+              "  th {\n",
+              "    background: #fbd44c;\n",
+              "    color: var(--font-color);\n",
+              "    font-size: 16px;\n",
+              "    text-align: center;\n",
+              "    font-weight: bold;\n",
+              "  }\n",
+              "  tr:nth-child(even) {\n",
+              "    background-color: var(--background-color);\n",
+              "    color: var(--font-color);\n",
+              "  }\n",
+              "  td {\n",
+              "    font-size: 14px;\n",
+              "    color: var(--td-font-color);\n",
+              "  }\n",
+              "</style>\n",
+              "<div style='max-height: 500px; overflow: auto; width: fit-content; border-style: solid; border-width: 1px; border-color: #0139fe; font-family: GT Planar,Inter,Arial,sans-serif;'><style type=\"text/css\">\n",
+              "</style>\n",
+              "<table id=\"T_00ab3_\">\n",
+              "  <thead>\n",
+              "    <tr>\n",
+              "      <th class=\"blank level0\" >&nbsp;</th>\n",
+              "      <th class=\"col_heading level0 col0\" >MIN(price_in_dollar)</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th id=\"T_00ab3_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+              "      <td id=\"T_00ab3_row0_col0\" class=\"data row0 col0\" >30.00</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "-------------------\n",
+            "Your SQL query is correct!\n",
+            "\n",
+            "-------------------\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
