--- a/Dureti_Shemsi_Week_2_Project_SQLCC.ipynb
+++ b/Dureti_Shemsi_Week_2_Project_SQLCC.ipynb
@@ -62,7 +62,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 56,
       "metadata": {
         "id": "gUx2DQloGAzk"
       },
@@ -135,7 +135,7 @@
       "metadata": {
         "id": "n-vdL9gWT2rm"
       },
-      "execution_count": 44,
+      "execution_count": 57,
       "outputs": []
     },
     {
@@ -2563,17 +2563,188 @@
         "\n",
         "# TO BE COMPLETED\n",
         "query = \"\"\"\n",
-        "SELECT ...\n",
+        "SELECT COUNT(*), neighbourhood_id \n",
+        "FROM listings \n",
+        "GROUP BY neighbourhood_id \n",
         "\"\"\"\n",
         "\n",
         "run(query)\n",
         "check(q2_5_1a = query)"
       ],
       "metadata": {
-        "id": "QsdAVWgzijZL"
+        "id": "QsdAVWgzijZL",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 588
+        },
+        "outputId": "d53576ce-e4d5-48e3-d74c-055e3adb2e29"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "\n",
+              "<style>\n",
+              "  html {\n",
+              "    --td-font-color: black;\n",
+              "    --font-color: black;\n",
+              "    --background-color: #e0e0e0;\n",
+              "  }\n",
+              "  html[theme=dark] {\n",
+              "    --td-font-color: white;\n",
+              "    --font-color: black;\n",
+              "    --background-color: #6688ff;\n",
+              "  }\n",
+              "  th {\n",
+              "    background: #fbd44c;\n",
+              "    color: var(--font-color);\n",
+              "    font-size: 16px;\n",
+              "    text-align: center;\n",
+              "    font-weight: bold;\n",
+              "  }\n",
+              "  tr:nth-child(even) {\n",
+              "    background-color: var(--background-color);\n",
+              "    color: var(--font-color);\n",
+              "  }\n",
+              "  td {\n",
+              "    font-size: 14px;\n",
+              "    color: var(--td-font-color);\n",
+              "  }\n",
+              "</style>\n",
+              "<div style='max-height: 500px; overflow: auto; width: fit-content; border-style: solid; border-width: 1px; border-color: #0139fe; font-family: GT Planar,Inter,Arial,sans-serif;'><style type=\"text/css\">\n",
+              "</style>\n",
+              "<table id=\"T_8c863_\">\n",
+              "  <thead>\n",
+              "    <tr>\n",
+              "      <th class=\"blank level0\" >&nbsp;</th>\n",
+              "      <th class=\"col_heading level0 col0\" >COUNT(*)</th>\n",
+              "      <th class=\"col_heading level0 col1\" >neighbourhood_id</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th id=\"T_8c863_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+              "      <td id=\"T_8c863_row0_col0\" class=\"data row0 col0\" >1</td>\n",
+              "      <td id=\"T_8c863_row0_col1\" class=\"data row0 col1\" >0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_8c863_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+              "      <td id=\"T_8c863_row1_col0\" class=\"data row1 col0\" >1</td>\n",
+              "      <td id=\"T_8c863_row1_col1\" class=\"data row1 col1\" >1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_8c863_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
+              "      <td id=\"T_8c863_row2_col0\" class=\"data row2 col0\" >1</td>\n",
+              "      <td id=\"T_8c863_row2_col1\" class=\"data row2 col1\" >4</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_8c863_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
+              "      <td id=\"T_8c863_row3_col0\" class=\"data row3 col0\" >2</td>\n",
+              "      <td id=\"T_8c863_row3_col1\" class=\"data row3 col1\" >8</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_8c863_level0_row4\" class=\"row_heading level0 row4\" >4</th>\n",
+              "      <td id=\"T_8c863_row4_col0\" class=\"data row4 col0\" >2</td>\n",
+              "      <td id=\"T_8c863_row4_col1\" class=\"data row4 col1\" >11</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_8c863_level0_row5\" class=\"row_heading level0 row5\" >5</th>\n",
+              "      <td id=\"T_8c863_row5_col0\" class=\"data row5 col0\" >1</td>\n",
+              "      <td id=\"T_8c863_row5_col1\" class=\"data row5 col1\" >17</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_8c863_level0_row6\" class=\"row_heading level0 row6\" >6</th>\n",
+              "      <td id=\"T_8c863_row6_col0\" class=\"data row6 col0\" >2</td>\n",
+              "      <td id=\"T_8c863_row6_col1\" class=\"data row6 col1\" >18</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_8c863_level0_row7\" class=\"row_heading level0 row7\" >7</th>\n",
+              "      <td id=\"T_8c863_row7_col0\" class=\"data row7 col0\" >5</td>\n",
+              "      <td id=\"T_8c863_row7_col1\" class=\"data row7 col1\" >20</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_8c863_level0_row8\" class=\"row_heading level0 row8\" >8</th>\n",
+              "      <td id=\"T_8c863_row8_col0\" class=\"data row8 col0\" >2</td>\n",
+              "      <td id=\"T_8c863_row8_col1\" class=\"data row8 col1\" >21</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_8c863_level0_row9\" class=\"row_heading level0 row9\" >9</th>\n",
+              "      <td id=\"T_8c863_row9_col0\" class=\"data row9 col0\" >3</td>\n",
+              "      <td id=\"T_8c863_row9_col1\" class=\"data row9 col1\" >23</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_8c863_level0_row10\" class=\"row_heading level0 row10\" >10</th>\n",
+              "      <td id=\"T_8c863_row10_col0\" class=\"data row10 col0\" >1</td>\n",
+              "      <td id=\"T_8c863_row10_col1\" class=\"data row10 col1\" >24</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_8c863_level0_row11\" class=\"row_heading level0 row11\" >11</th>\n",
+              "      <td id=\"T_8c863_row11_col0\" class=\"data row11 col0\" >3</td>\n",
+              "      <td id=\"T_8c863_row11_col1\" class=\"data row11 col1\" >26</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_8c863_level0_row12\" class=\"row_heading level0 row12\" >12</th>\n",
+              "      <td id=\"T_8c863_row12_col0\" class=\"data row12 col0\" >4</td>\n",
+              "      <td id=\"T_8c863_row12_col1\" class=\"data row12 col1\" >27</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_8c863_level0_row13\" class=\"row_heading level0 row13\" >13</th>\n",
+              "      <td id=\"T_8c863_row13_col0\" class=\"data row13 col0\" >1</td>\n",
+              "      <td id=\"T_8c863_row13_col1\" class=\"data row13 col1\" >28</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_8c863_level0_row14\" class=\"row_heading level0 row14\" >14</th>\n",
+              "      <td id=\"T_8c863_row14_col0\" class=\"data row14 col0\" >3</td>\n",
+              "      <td id=\"T_8c863_row14_col1\" class=\"data row14 col1\" >29</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_8c863_level0_row15\" class=\"row_heading level0 row15\" >15</th>\n",
+              "      <td id=\"T_8c863_row15_col0\" class=\"data row15 col0\" >2</td>\n",
+              "      <td id=\"T_8c863_row15_col1\" class=\"data row15 col1\" >31</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_8c863_level0_row16\" class=\"row_heading level0 row16\" >16</th>\n",
+              "      <td id=\"T_8c863_row16_col0\" class=\"data row16 col0\" >10</td>\n",
+              "      <td id=\"T_8c863_row16_col1\" class=\"data row16 col1\" >32</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_8c863_level0_row17\" class=\"row_heading level0 row17\" >17</th>\n",
+              "      <td id=\"T_8c863_row17_col0\" class=\"data row17 col0\" >1</td>\n",
+              "      <td id=\"T_8c863_row17_col1\" class=\"data row17 col1\" >33</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_8c863_level0_row18\" class=\"row_heading level0 row18\" >18</th>\n",
+              "      <td id=\"T_8c863_row18_col0\" class=\"data row18 col0\" >13</td>\n",
+              "      <td id=\"T_8c863_row18_col1\" class=\"data row18 col1\" >35</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_8c863_level0_row19\" class=\"row_heading level0 row19\" >19</th>\n",
+              "      <td id=\"T_8c863_row19_col0\" class=\"data row19 col0\" >5</td>\n",
+              "      <td id=\"T_8c863_row19_col1\" class=\"data row19 col1\" >37</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "-------------------\n",
+            "Your SQL query is correct!\n",
+            "\n",
+            "-------------------\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2595,17 +2766,110 @@
         "\n",
         "# TO BE COMPLETED\n",
         "query = \"\"\"\n",
-        "SELECT ...\n",
+        "SELECT COUNT(*), neighbourhood_id\n",
+        "FROM listings \n",
+        "GROUP BY neighbourhood_id \n",
+        "HAVING count(*)>4\n",
+        "\n",
         "\"\"\"\n",
         "\n",
         "run(query)\n",
         "check(q2_5_1b = query)"
       ],
       "metadata": {
-        "id": "L5m49_0TWZ6c"
+        "id": "L5m49_0TWZ6c",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 209
+        },
+        "outputId": "f04b0c56-33c3-4ef7-d399-e287bd71476a"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "\n",
+              "<style>\n",
+              "  html {\n",
+              "    --td-font-color: black;\n",
+              "    --font-color: black;\n",
+              "    --background-color: #e0e0e0;\n",
+              "  }\n",
+              "  html[theme=dark] {\n",
+              "    --td-font-color: white;\n",
+              "    --font-color: black;\n",
+              "    --background-color: #6688ff;\n",
+              "  }\n",
+              "  th {\n",
+              "    background: #fbd44c;\n",
+              "    color: var(--font-color);\n",
+              "    font-size: 16px;\n",
+              "    text-align: center;\n",
+              "    font-weight: bold;\n",
+              "  }\n",
+              "  tr:nth-child(even) {\n",
+              "    background-color: var(--background-color);\n",
+              "    color: var(--font-color);\n",
+              "  }\n",
+              "  td {\n",
+              "    font-size: 14px;\n",
+              "    color: var(--td-font-color);\n",
+              "  }\n",
+              "</style>\n",
+              "<div style='max-height: 500px; overflow: auto; width: fit-content; border-style: solid; border-width: 1px; border-color: #0139fe; font-family: GT Planar,Inter,Arial,sans-serif;'><style type=\"text/css\">\n",
+              "</style>\n",
+              "<table id=\"T_580e8_\">\n",
+              "  <thead>\n",
+              "    <tr>\n",
+              "      <th class=\"blank level0\" >&nbsp;</th>\n",
+              "      <th class=\"col_heading level0 col0\" >COUNT(*)</th>\n",
+              "      <th class=\"col_heading level0 col1\" >neighbourhood_id</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th id=\"T_580e8_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+              "      <td id=\"T_580e8_row0_col0\" class=\"data row0 col0\" >5</td>\n",
+              "      <td id=\"T_580e8_row0_col1\" class=\"data row0 col1\" >20</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_580e8_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+              "      <td id=\"T_580e8_row1_col0\" class=\"data row1 col0\" >10</td>\n",
+              "      <td id=\"T_580e8_row1_col1\" class=\"data row1 col1\" >32</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_580e8_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
+              "      <td id=\"T_580e8_row2_col0\" class=\"data row2 col0\" >13</td>\n",
+              "      <td id=\"T_580e8_row2_col1\" class=\"data row2 col1\" >35</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_580e8_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
+              "      <td id=\"T_580e8_row3_col0\" class=\"data row3 col0\" >5</td>\n",
+              "      <td id=\"T_580e8_row3_col1\" class=\"data row3 col1\" >37</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "-------------------\n",
+            "Your SQL query is correct!\n",
+            "\n",
+            "-------------------\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
